[package]
name = "cvlr-solana"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
authors.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.release]
pre-release-replacements = [
  {file="../README.md", search="[*][*]Current release:[*][*] `[a-z0-9\\.-]+`", replace="**Current release:** `{{version}}`"} ,
  {file="../README.md", search="version", replace="{{version}}"},
  {file="../CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="../CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="../CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="../CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="../CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/Certora/cvlr-solana/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = []
rt = ["cvlr-nondet/rt", "cvlr-asserts/rt", "cvlr-mathint/rt"]

[dependencies]
solana-program = { workspace =  true }
arrayref = { workspace = true }

cvlr-asserts = { workspace = true }
cvlr-nondet = { workspace = true }
cvlr-mathint = { workspace = true }
cvlr-log = { workspace = true }
cvlr-early-panic = { workspace = true }
cvlr-macros = { workspace = true }
